# aeronerve_workspace

./: .gitignore  Dockerfile  HACKMD_NAV2_DRONE.md  README.md
.github/workflows/: ros_ci.yml
Navigation Architecture/: quadcopter_nav_architecture_overview.html
log/: latest_build  latest_list  latest_test
src/aero_nav2/: package.xml  setup.cfg  setup.py
src/aero_nav2/aero_nav2/: depth_to_costmap.py  global_planner.py  local_planner.py  mission_client.py  nav2_mavros_bridge.py  nav2_mission_client.py  occupancy_map.py
src/aero_nav2/config/: drone_nav_bt.xml  nav2_drone.rviz  nav2_params.yaml
src/aero_nav2/launch/: custom_nav_launch.py  nav2_launch.py
src/odom_vision/: package.xml  setup.cfg  setup.py
src/odom_vision/launch/: pose.launch.py
src/odom_vision/odom_vision/: apf_planner.py  astar_planner.py  depth_distance.py  drone_state_broadcaster.py  figure8_trajectory.py  gcs_watchdog.py  grid_control.py  hybrid_planner.py  keyboard_control.py  mission_sequencer.py  odom_to_vision_pose.py  pose_compare.py  square_waypoints.py  takeoff_land.py  tf_publisher.py
